# atividade-livraria

./: .gitignore  README.md  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
core/: Serializers.py  admin.py  tempCodeRunnerFile.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_alter_autor_email_alter_livro_preco_and_more.py  0003_autor_livro.py
core/models/: autor.py  livro.py
core/serializers/: editora.py  livro.py
core/views/: autor.py  editora.py  livro.py
livraria/: settings.py  urls.py
media/migrations/: 0001_initial.py
